--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,15 @@
   <main class="container">
     <app-root></app-root>
   </main>
+
+  <footer>
+    <span>
+        Built with <a href="https://picocss.com">Pico css</a>, <a href="https://angular.dev/">Angular</a>. Icons
+        from <a href="https://iconpacks.net">iconpacks.net</a>.
+    </span>
+    <span style="float: right;">
+        <a href="https://github.com/qfulsher/obr-power-roller"><img style="height: 20px; width: 20px;" src="/github-mark.svg" alt="github repo"></a>
+    </span>
+  </footer>
 </body>
 </html>
