update readme, fix a link

--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,9 @@
         from <a href="https://iconpacks.net">iconpacks.net</a>.
     </small>
     <span style="float: right;">
-        <a href="https://github.com/qfulsher/obr-power-roller"><img style="height: 20px; width: 20px;" src="/github-mark.svg" alt="github repo"></a>
+        <a href="https://github.com/qfulsher/ds-power-roller"><img style="height: 20px; width: 20px;" src="/github-mark.svg" alt="github repo"></a>
     </span>
   </footer>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
