fix pico attribution, remove some unused imports

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
   <footer>
     <small>
-        Built with <a href="https://picocss.com">Pico css</a>, <a href="https://angular.dev/">Angular</a>. Icons
+        Built with <a href="https://picocss.com">Pico CSS</a>, <a href="https://angular.dev/">Angular</a>. Icons
         from <a href="https://iconpacks.net">iconpacks.net</a>.
     </small>
     <span style="float: right;">
